--- a/Capstone1/cap1.html
+++ b/Capstone1/cap1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="cap1.css">
 	<title>Capstone project-1</title>
